--- a/public/ex2/info.html
+++ b/public/ex2/info.html
@@ -57,6 +57,7 @@
                     // Create Table Element
                     const tableElem = document.createElement("table");
                     const tbodyElem = document.createElement("tbody");
+                    tableElem.setAttribute("class", "table"); // bootstrap class
 
                     // Table Header Row
                     const tableHeaderRowElem = document.createElement("tr")
